# FluidSimulation

./: CMakeLists.txt  Dockerfile  README.md
include/: color.hpp  const.hpp  container.hpp  options.hpp  physics.hpp  sim.hpp
src/: IX.cpp  container.cpp  main.cpp  options.cpp  physics.cpp  sim.cpp
